# LangGraphCatalyst

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini  render.yaml  requirements.txt
.claude/: CLAUDE.md
.github/workflows/: README.md  ci.yml  deploy.yml
.streamlit/: config.toml
backend/: main.py
backend/api/v1/: __init__.py  architect.py  auth.py  learning_path.py  rag.py  templates.py
backend/core/: config.py  dependencies.py  security.py  usage_limiter.py  users.py
backend/schemas/: architect.py  auth.py  common.py  learning_path.py  rag.py  templates.py
backend/tests/: conftest.py  test_api_architect.py  test_api_rag.py
docs/: API_SPECIFICATION.md  DEPLOYMENT_GUIDE.md  ER_DIAGRAM.md  TEST_SPECIFICATION.md  TODO.md  architect_developer_guide.html  architect_user_guide.html  developer_guide.html  rag_developer_guide.html  rag_user_guide.html  system_overview.html
e2e/: architect.spec.ts  rag.spec.ts
frontend/: .env.production  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: README.md  smoke.spec.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: architect.ts  auth.ts  client.ts  learningPath.ts  rag.ts  templates.ts  usage.ts
frontend/src/components/: ProtectedRoute.tsx  UsageLimitBadge.tsx
frontend/src/pages/: ArchitectPage.tsx  HomePage.tsx  LearningPathPage.tsx  LoginPage.tsx  RAGPage.tsx  TemplatesPage.tsx
frontend/src/store/: architectStore.ts  authStore.ts  learningStore.ts  ragStore.ts
scripts/: QUICKSTART.md  README.md  clean.sh  crawl-docs.sh  db-reset.sh  format.sh  init_vectorstore.py  lint.sh  pre-deploy.sh  run.sh  setup.sh  test.sh  test_architect.py  test_rag_improvements.py
src/: app.py
src/components/: sidebar.py
src/config/: settings.py
src/utils/: caching.py  error_handlers.py  exceptions.py  helpers.py  progress_manager.py  styles.py
tests/: conftest.py  test_architect_graph.py  test_config.py  test_crawler.py  test_helpers.py  test_integration.py  test_rag_chain.py  test_vectorstore.py  test_visualizer.py
(+24 files in other folders)
